--- a/resources/sass/layout/_grid.scss
+++ b/resources/sass/layout/_grid.scss
@@ -2,7 +2,6 @@
     display: flex;
     max-width: $max-width;
     margin: 0 auto;
-    padding: 0 5rem;
     @include sm(){
       padding: 0 10rem;
     }
